--- a/templates/exp.html
+++ b/templates/exp.html
@@ -36,6 +36,7 @@
 			for most purposes this is where you want to focus debugging, development, etc...
 		-->
 		<script src="/static/js/task.js" type="text/javascript"> </script>
+		<link href='https://fonts.googleapis.com/css?family=Slabo+27px|Dancing+Script|Yesteryear|Gochi+Hand|Press+Start+2P|Monoton|VT323' rel='stylesheet' type='text/css'>
 
         <link rel=stylesheet href="/static/css/bootstrap.min.css" type="text/css">
         <link rel=stylesheet href="/static/css/style.css" type="text/css">
